home page changes
home page

--- a/src/app/modules/dashboard/shared/sidebar/sidebar.component.html
+++ b/src/app/modules/dashboard/shared/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
 <ul class="sidebar-menu">
     <li class="parentMenu" (click)="isShow()"><a routerLink="dashboard" routerLinkActive="active"><i class="fa fa-tachometer" aria-hidden="true" ></i> <span>Dashboard</span></a>
-        <!-- <ul id="submenu">
+        <ul id="submenu">
             <li><a>Submenu 1</a></li>
             <li><a>Submenu 2</a></li>
             <li><a>Submenu 3</a></li>
             <li><a>Submenu 4</a></li>
-        </ul> -->
+        </ul>
     </li>
     <li><a routerLink="orders" routerLinkActive="active"><i class="fa fa-bus" aria-hidden="true"></i> <span>Orders</span></a></li>
     <li><a routerLink="vehicel" routerLinkActive="active"><i class="fa fa-bus" aria-hidden="true"></i> <span>Vehicle</span></a></li>
