--- a/src/app/modules/home/contact/contact.component.scss
+++ b/src/app/modules/home/contact/contact.component.scss
@@ -4,7 +4,7 @@ ul{
         i{position: absolute; top: 10px; left: 0; font-size: 20px; color: #72c571;}
     }
 }
-.mapbg{width: 100%;border: solid 1px #e2e2e2; margin-bottom: 30px; margin-top: 10px;}
+.mapbg{width: 100%;border: solid 1px #e2e2e2; margin-bottom: 30px;}
 .opening-box{
     ul {
         li{font-size: 14px; padding:2px 0;
