--- a/src/app/modules/home/header/header.component.html
+++ b/src/app/modules/home/header/header.component.html
@@ -18,14 +18,14 @@
                         true}" data-toggle="collapse" data-target=".navbar-collapse.show">Contact Us</a>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item book-web">
                       <a class="nav-link" (click)="openDialog()" class="book-now">Book</a>
                     </li>
 
                   </ul>
                  
                 </div>
-                <!-- <span class="book-now"><a (click)="openDialog()">Book</a></span> -->
+                <span class="book-now-mobile"><a (click)="openDialog()">Book</a></span>
               </nav>
         </div>
     </div>
