--- a/src/app/modules/home/header/header.component.scss
+++ b/src/app/modules/home/header/header.component.scss
@@ -1,6 +1,8 @@
 header{
     position: fixed; top: 0;z-index: 99;
     width: 100%;
+    .navbar-brand{margin-top: 15px; height: 52px;background: #fff;padding: 10px 20px;border-radius: 20px;
+    display: inline-flex; align-items: center; color: #1d5077;}
         .navbar{width: 100%;padding:0;display:inline-block !important;
             .logo{font-size:20px; line-height: 20px; color: #2481c9;padding: 12px 0 15px 0;}
                 ul{
@@ -21,19 +23,23 @@ header{
     .book-now{border: solid 1px #2481c9;padding: 5px 14px !important; margin: 0; border-radius: 16px;margin-top:0 !important;cursor: pointer;
     &:hover{border-bottom:solid 1px #2481c9 !important;}
     }
-    .navbar-brand{margin-top: 26px;}
+   .book-now-mobile{display: none;}
 }
   
 @media screen and (max-width: 991px) {
+    .book-web{display: none !important;}
+    .book-now-mobile{display: block !important;position: absolute; top: 4px; right: 15px; border: solid 1px #2481c9;color: #2481c9;
+    border-radius: 20px; padding: 5px 10px;background: #fff;}
     header{height: 41px;
         .navbar {
          display: block !important;padding:0 15px;
         .navbar-brand{margin-top: 4px;}
-        .navbar-toggler{float: right; margin-left: 15px; padding: 0 4px; margin-top: 4px;}
-        .book-now{position: absolute; top: 10px; right: 70px;
+        .navbar-toggler{float: right; margin-left: 15px; padding: 0 4px; margin-top: 4px;background: #89d6eb;border: solid 1px #fff;
+        margin-right: 58px;}
+        .book-now{position: absolute; top: 10px; right: 70px; display: none;
             a{padding: 5px 15px;}    
         }
-        .navbar-collapse{background:rgba(0, 0, 0, 0.5); margin-top: 8px;
+        .navbar-collapse{background:rgba(0, 0, 0, 0.5); margin-top: 8px; width: 100%; border-radius: 0;
             ul{margin: 0;
                 li{
                     a{width: 100%; color: #fff !important;}
@@ -43,8 +49,5 @@ header{
         }
         }
     }
-  }
-  @media screen and (max-width: 991px) {
-    .navbar-brand{font-size: 16px;}
-
+    .navbar-brand{font-size: 16px; height:auto !important;padding: 5px 10px !important;}
   }
