--- a/src/app/modules/home/contact/contact.component.html
+++ b/src/app/modules/home/contact/contact.component.html
@@ -1,9 +1,9 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <!-- <div class="mapbg">
+                <div class="mapbg">
             <div style="width: 100%"><div style="width: 100%"><iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=350&amp;hl=en&amp;q=101%20Platinum%20plaza%20Pu%204+(Water%20Suppliers)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div></div>
-            </div> -->
+            </div>
             </div>
         </div>
         <div class="row">
