--- a/src/app/modules/home/footer/footer.component.scss
+++ b/src/app/modules/home/footer/footer.component.scss
@@ -1,1 +1,1 @@
-footer{width:100%; height: 40px; background: #eaeaea;  text-align: center; line-height: 36px; border-top: solid 1px #e8e8e8;}
+footer{width:100%; height: 40px; background: #89d6eb;  text-align: center; line-height: 36px; border-top: solid 1px #f7faff;}
