--- a/src/app/modules/home/home/carousel/carousel.component.scss
+++ b/src/app/modules/home/home/carousel/carousel.component.scss
@@ -1,7 +1,7 @@
 
-.rotateslider-container {position: relative; width: 100%; height: 450px; overflow: hidden;
+.rotateslider-container {position: relative; width: 100%; height: 450px; overflow: hidden;background: #89d6eb;
     .rotateslider-item {position: absolute;left: 50%; top: 50%; -webkit-transform: translateY(-50%) translateX(-40%) scale(0.8);
-        -ms-transform: translateY(-50%) translateX(-40%) scale(0.8); transform: translateY(-50%) translateX(-40%) scale(0.8);
+        -ms-transform: translateY(-50%) translateX(-40%) scale(0.94); transform: translateY(-50%) translateX(-40%) scale(0.8);
         opacity: 0;-webkit-filter: blur(1px);filter: blur(1px); -webkit-transition: all 0.6s ease; transition: all 0.6s ease;
         width: 100%; height: 100%; overflow: hidden;
         img{
@@ -48,9 +48,9 @@
     filter: blur(0px);
     top: 50%;
     left: 50%;
-    -webkit-transform: translateY(-50%) translateX(-50%) scale(0.8);
-    -ms-transform: translateY(-50%) translateX(-50%) scale(0.8);
-    transform: translateY(-50%) translateX(-50%) scale(0.8);
+    -webkit-transform: translateY(-50%) translateX(-50%) scale(0.94);
+    -ms-transform: translateY(-50%) translateX(-50%) scale(0.94);
+    transform: translateY(-50%) translateX(-50%) scale(0.94);
     z-index: 9;
    
   }
