--- a/src/app/modules/dashboard/employee/employee.component.html
+++ b/src/app/modules/dashboard/employee/employee.component.html
@@ -1,3 +1,18 @@
+<div class="row admin-top">
+    <div class="col-lg-8">
+        <h2>Employee List</h2>
+    </div>
+    <div class="col-lg-4 text-right">
+        <button mat-flat-button color="primary" (click)="openDialog()">Add Employee</button>
+    </div>
+</div>
+
 <div class="row">
-    <div class="col-lg-12"><h2>Employee</h2></div>
+    <div class="col-lg-12">
+        <ag-grid-angular
+        class="ag-theme-alpine ag-grid"
+        [rowData]="rowData" 
+        [columnDefs]="columnDefs">
+    </ag-grid-angular>
+    </div>
 </div>
