--- a/src/app/modules/dashboard/rate-scheduler/rate-scheduler.component.html
+++ b/src/app/modules/dashboard/rate-scheduler/rate-scheduler.component.html
@@ -1,3 +1,65 @@
 <div class="row">
     <div class="col-lg-12"><h2>Rate Scheduler</h2></div>
 </div>
+
+<div class="rate-shedular container-fluid">
+           
+            <div class="row">
+                <div class="col-lg-12"><h3>Select Date</h3></div>
+            </div>
+            <div class="row">
+                <div class="col-lg-2">
+                    <div class="date-box">
+                    <input [matDatepicker]="picker" class="form-control" placeholder="Date From">
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                  </div>
+                </div>
+                <div class="col-lg-2">
+                  <div class="date-box">
+                    <input [matDatepicker]="picker1" class="form-control" placeholder="To Date">
+                    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                    <mat-datepicker #picker1></mat-datepicker>
+                  </div>
+                </div>
+               
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12"><h3>Tanker Capicity</h3></div>
+            </div>
+            <div class="row">
+            <div class="col-lg-2">
+                <label>1000 Litter</label>
+                <input type="text" class="form-control" placeholder="Rate">
+            </div>
+            <div class="col-lg-2">
+                <label>30000 Litter</label>
+                <input type="text" class="form-control" placeholder="Rate">
+            </div>
+            <div class="col-lg-2">
+                <label>5000 Litter</label>
+                <input type="text" class="form-control" placeholder="Rate">
+            </div>
+            <div class="col-lg-2">
+                <label>10000 Litter</label>
+                <input type="text" class="form-control" placeholder="Rate">
+            </div>
+            <div class="col-lg-2">
+                <label>15000 Litter</label>
+                <input type="text" class="form-control" placeholder="Rate">
+            </div>
+            <div class="col-lg-2">
+                <label>20000 Litter</label>
+                <input type="text" class="form-control" placeholder="Rate">
+            </div>
+           </div>
+
+           <div class="row">
+               <div class="col-lg-12">
+                    <button mat-flat-button color="primary">Save</button>
+                </div>
+            </div>
+       
+   
+</div>
