--- a/src/app/modules/dashboard/shared/sidebar/sidebar.component.html
+++ b/src/app/modules/dashboard/shared/sidebar/sidebar.component.html
@@ -1,17 +1,17 @@
 <ul class="sidebar-menu">
-    <li class="parentMenu" (click)="isShow()"><a routerLink="dashboard" routerLinkActive="active"><i class="fa fa-tachometer" aria-hidden="true" ></i> <span>Dashboard</span></a>
-        <ul id="submenu">
+    <li class="" (click)="isShow()"><a routerLink="dashboard" routerLinkActive="active"><i class="fa fa-tachometer" aria-hidden="true" ></i> <span>Dashboard</span></a>
+        <!-- <ul id="submenu">
             <li><a>Submenu 1</a></li>
             <li><a>Submenu 2</a></li>
             <li><a>Submenu 3</a></li>
             <li><a>Submenu 4</a></li>
-        </ul>
+        </ul> -->
     </li>
-    <li><a routerLink="orders" routerLinkActive="active"><i class="fa fa-bus" aria-hidden="true"></i> <span>Orders</span></a></li>
+    <li><a routerLink="employee" routerLinkActive="active"><i class="fa fa-users" aria-hidden="true"></i> <span>Employee</span></a></li>
     <li><a routerLink="vehicel" routerLinkActive="active"><i class="fa fa-bus" aria-hidden="true"></i> <span>Vehicle</span></a></li>
     <li><a routerLink="role" routerLinkActive="active"><i class="fa fa-unlock-alt" aria-hidden="true"></i> <span>Role management</span></a></li>
-    <li><a routerLink="employee" routerLinkActive="active"><i class="fa fa-users" aria-hidden="true"></i> <span>Employee</span></a></li>
     <li><a routerLink="customer" routerLinkActive="active"><i class="fa fa-user" aria-hidden="true"></i> <span>Customers</span></a></li>
+    <li><a routerLink="orders" routerLinkActive="active"><i class="fa fa-bus" aria-hidden="true"></i> <span>Orders</span></a></li>
     <li><a routerLink="invoice" routerLinkActive="active"><i class="fa fa-file-text" aria-hidden="true"></i> <span>Invoice </span></a></li>
     <li><a routerLink="payment" routerLinkActive="active"><i class="fa fa-money" aria-hidden="true"></i> <span>Payment</span></a></li>
     <li><a routerLink="rate" routerLinkActive="active"><i class="fa fa-clock-o" aria-hidden="true"></i> <span>Rate Schedule</span></a></li>
