--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,6 +16,7 @@ h1, h2, h3, h4, h5, h6{color: #1d5077;}
 h1{font-size: 40px;}
 h2{font-size: 26px !important;}
 ::-webkit-scrollbar {width: 8px;}
+::-webkit-scrollbar:horizontal{height: 8px;}
 ::-webkit-scrollbar-track {background: #d7d7d7;}
 ::-webkit-scrollbar-thumb {background: #5f86a5;border-radius: 8px;}
 ::-webkit-scrollbar-thumb:hover {background: #537c9d;}
@@ -60,4 +61,7 @@ app-dashboard-container{float: left; width: 100%; clear: both;
     .ag-header{height: 32px !important; min-height: 32px !important;background: #2481c9;}
     .ag-header-row{height: 32px !important; min-height: 32px !important;}
     .ag-header-cell-label{color: #fff;}
+    .ag-body-horizontal-scroll{display: none;}
+    .ag-center-cols-viewport{overflow: auto;}
+     .ag-center-cols-viewport{height: 100% !important;}
 }
